# Abyss

./: CMakeLists.txt  LICENSE  README.md  cpp.cpp
assets/fonts/: ggsans.h  quicksand.h  quicksandBold.h  quicksandMedium.h
assets/icons/: abyssIcon.h
libraries/glew/debug/lib/: glew32d.lib
libraries/glew/debug/lib/pkgconfig/: glew.pc
libraries/glew/include/GL/: glew.h  wglew.h
libraries/glew/lib/: glew32.lib
libraries/glew/lib/pkgconfig/: glew.pc
libraries/glew/share/glew/: CopyImportedTargetProperties.cmake  glew-config.cmake  glew-targets-debug.cmake  glew-targets-release.cmake  glew-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
libraries/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl2.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
libraries/jni/: classfile_constants.h  jawt.h  jawt_md.h  jdwpTransport.h  jni.h  jni_md.h  jvmti.h  jvmticmlr.h
libraries/minhook/: buffer.cpp  buffer.h  hook.cpp  minhook.h  trampoline.cpp  trampoline.h
libraries/minhook/hde/: hde32.cpp  hde32.h  hde64.cpp  hde64.h  pstdint.h  table32.h  table64.h
libraries/stb/: stb_image.h
src/me/sleepyfish/abyss/: Inject.cpp
src/me/sleepyfish/abyss/client/: Abyss.cpp  Abyss.h
src/me/sleepyfish/abyss/gui/: ClickGui.cpp  ClickGui.h
src/me/sleepyfish/abyss/gui/hooks/: DoRenderEntityHook.cpp  KeyEvent.cpp  PacketHook.cpp  RenderHook.cpp  SwapBuffers.cpp
src/me/sleepyfish/abyss/java/: Java.cpp  Java.h
src/me/sleepyfish/abyss/java/mapper/: Mapper.cpp  Mapper.h
src/me/sleepyfish/abyss/java/sdk/: Sdk.cpp  Sdk.h  SdkClass.h
src/me/sleepyfish/abyss/java/sdk/java/: JavaList.cpp  JavaList.h  JavaString.cpp  JavaString.h  JavaUUID.cpp  JavaUUID.h
src/me/sleepyfish/abyss/java/sdk/minecraft/: Minecraft.cpp  Minecraft.h
src/me/sleepyfish/abyss/java/sdk/minecraft/entity/: Entity.cpp  Entity.h  EntityLivingBase.cpp  EntityLivingBase.h  EntityPlayer.cpp  EntityPlayer.h  EntityPlayerSP.cpp  EntityPlayerSP.h
src/me/sleepyfish/abyss/java/sdk/minecraft/item/: InventoryPlayer.cpp  InventoryPlayer.h  Item.cpp  Item.h  ItemStack.cpp  ItemStack.h
src/me/sleepyfish/abyss/java/sdk/minecraft/settings/: GameSettings.cpp  GameSettings.h  Session.cpp  Session.h
src/me/sleepyfish/abyss/java/sdk/minecraft/utils/: Block.cpp  Block.h  BlockPos.cpp  BlockPos.h  MovingObjectPosition.cpp  MovingObjectPosition.h
src/me/sleepyfish/abyss/java/sdk/minecraft/world/: ServerData.cpp  ServerData.h  Team.cpp  Team.h  World.cpp  World.h  WorldClient.cpp  WorldClient.h
src/me/sleepyfish/abyss/modules/: Category.h  HudModule.h  Module.h  ModuleManager.cpp  ModuleManager.h
src/me/sleepyfish/abyss/modules/impl/blatant/: Hitbox.cpp  Hitbox.h
src/me/sleepyfish/abyss/modules/impl/hud/: Coordinates.cpp  Coordinates.h  Fps.cpp  Fps.h  Keystrokes.cpp  Keystrokes.h  RamUsed.cpp  RamUsed.h  ServerIp.cpp  ServerIp.h  ServerName.cpp  ServerName.h
src/me/sleepyfish/abyss/modules/impl/legit/: AimAssist.cpp  AimAssist.h  AutoClickerL.cpp  AutoClickerL.h  AutoClickerR.cpp  AutoClickerR.h  JumpReset.cpp  JumpReset.h  LegitScaffold.cpp  LegitScaffold.h  TriggerBot.cpp  TriggerBot.h
src/me/sleepyfish/abyss/modules/impl/other/: AutoLow.cpp  AutoLow.h  AutoMove.cpp  AutoMove.h  AutoPearl.cpp  AutoPearl.h  AutoTool.cpp  AutoTool.h  CustomScript.cpp  CustomScript.h  Remover.cpp  Remover.h
src/me/sleepyfish/abyss/modules/impl/useless/: Disabler.cpp  Disabler.h  Headache.cpp  Headache.h  Spin.cpp  Spin.h
src/me/sleepyfish/abyss/modules/impl/visual/: Fullbright.cpp  Fullbright.h  Overlay.cpp  Overlay.h  PlayerOverlay.cpp  PlayerOverlay.h  TextGui.cpp  TextGui.h  TimeChanger.cpp  TimeChanger.h
src/me/sleepyfish/abyss/modules/settings/: Setting.h
src/me/sleepyfish/abyss/modules/settings/impl/: BoolSetting.h  ColorSetting.h  InfoSetting.h  ModeSetting.h  SliderSetting.h  SpaceSetting.h  TextSetting.h
src/me/sleepyfish/abyss/utils/: ClickGuiUtils.h  ClickUtils.h  ClientUtils.h  ColorUtils.h  EnvUtils.h  Logger.h  MathUtils.h  MemoryStats.h  Utils.h
src/me/sleepyfish/abyss/utils/notification/: Notification.h  NotificationUtils.h
src/me/sleepyfish/abyss/utils/opengl/: TextureUtils.cpp  TextureUtils.h
src/me/sleepyfish/abyss/utils/opengl/animation/normal/: Animation.h  DecelerateAnimation.h
src/me/sleepyfish/abyss/utils/opengl/animation/simple/: AnimationUtils.h  SimpleAnimation.h
src/me/sleepyfish/abyss/utils/type/: ArrayList.h  Class.h  Set.h  String.h  Vector2.h  Vector3.h  Vector4.h
